<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/SettingsRow" >

        <CheckedTextView
            android:id="@+id/sniffingCheckBox"
            style="@style/SettingsItemLabel"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:text="@string/sniffing_label"
            android:textIsSelectable="false" />
    </LinearLayout>

    <include layout="@layout/horizontalline" />

    <LinearLayout style="@style/SettingsRow" >

        <CheckedTextView
            android:id="@+id/multipleResponseCheckBox"
            style="@style/SettingsItemLabel"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:text="@string/multiple_responses_label"
            android:textIsSelectable="false" />
    </LinearLayout>

    <include layout="@layout/horizontalline" />

    <LinearLayout style="@style/SettingsRow" >

        <CheckedTextView
            android:id="@+id/responseScrollCheckBox"
            style="@style/SettingsItemLabel"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="true"
            android:text="@string/response_scroll_label"
            android:textIsSelectable="false" />
    </LinearLayout>

    <include layout="@layout/horizontalline" />

    <LinearLayout style="@style/SettingsRow" >

        <TextView
            style="@style/SettingsItemLabel"
            android:text="@string/cancel_recurring_requests_label"
            android:textIsSelectable="false" />

        <Button
            android:id="@+id/cancelRecurringRequestsButton"
            style="@style/SettingsItemButton"
            android:background="@drawable/cancel_button_selector"
            android:text="@string/cancel_recurring_requests_button_text" />
    </LinearLayout>

    <include layout="@layout/horizontalline" />

    <LinearLayout style="@style/SettingsRow" >

        <TextView
            style="@style/SettingsItemLabel"
            android:text="@string/delete_diagnostic_responses_label"
            android:textIsSelectable="false" />

        <Button
            android:id="@+id/deleteDiagnosticResponsesButton"
            style="@style/SettingsItemButton"
            android:background="@drawable/delete_button_selector"
            android:text="@string/delete_all_responses_button_text" />
    </LinearLayout>

    <include layout="@layout/horizontalline" />

    <LinearLayout style="@style/SettingsRow" >

        <TextView
            style="@style/SettingsItemLabel"
            android:text="@string/delete_command_responses_label"
            android:textIsSelectable="false" />

        <Button
            android:id="@+id/deleteCommandResponsesButton"
            style="@style/SettingsItemButton"
            android:background="@drawable/delete_button_selector"
            android:text="@string/delete_all_responses_button_text" />
    </LinearLayout>

    <include layout="@layout/horizontalline" />

    <LinearLayout style="@style/SettingsRow" >

        <TextView
            style="@style/SettingsItemLabel"
            android:text="@string/response_command_toggle_label"
            android:textIsSelectable="false" />

        <Button
            android:id="@+id/responseCommandToggleButton"
            style="@style/SettingsItemButton"
            android:background="@drawable/delete_button_selector" />
    </LinearLayout>

</LinearLayout>