<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp">
    
    <LinearLayout   
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal" >
                      
          <TextView
              style="@style/FavoriteDataLabel"
              android:id="@+id/nameHeader"
              android:text="@string/name_label">
          </TextView>  
        
          <include layout="@layout/verticalline" />
          
          <TextView
              style="@style/FavoriteDataLabel"
              android:id="@+id/busHeader"
              android:text="@string/bus_label">
          </TextView>
          
          <include layout="@layout/verticalline" />
          
          <TextView
              style="@style/FavoriteDataLabel"
              android:id="@+id/idHeader"
              android:text="@string/id_label">
          </TextView>
          
          <include layout="@layout/verticalline" />
          
          <TextView
              style="@style/FavoriteDataLabel"
              android:id="@+id/modeHeader"
              android:text="@string/mode_label">
          </TextView>
          
          <include layout="@layout/verticalline" />
          
          <TextView
              style="@style/FavoriteDataLabel"
              android:id="@+id/pidHeader"
              android:text="@string/pid_label">
          </TextView>
          
          <include layout="@layout/verticalline" />
          
          <TextView
              style="@style/FavoriteDataLabel"
              android:id="@+id/payloadHeader"
              android:text="@string/payload_label">
          </TextView>
              
    </LinearLayout>
    
    <include layout="@layout/thickhorizontalline" />

	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	   
	    <LinearLayout 
	        android:id="@+id/favoritesAlertTable"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		</LinearLayout>
	    
	</ScrollView>

</LinearLayout>