<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/DiagRequestInputRow" >

        <Button
            android:id="@+id/busQuestionButton"
            style="@style/QuestionButton" />

        <TextView
            android:id="@+id/busLabel"
            style="@style/DiagInputLabel"
            android:labelFor="@+id/busInput"
            android:text="@string/bus_label" />

        <EditText
            android:id="@+id/busInput"
            style="@style/DiagInputText"
            android:inputType="number" />

        <Button
            android:id="@+id/idQuestionButton"
            style="@style/QuestionButton" />

        <TextView
            android:id="@+id/idLabel"
            style="@style/DiagInputLabel"
            android:labelFor="@+id/idInput"
            android:text="@string/id_label" />

        <EditText
            android:id="@+id/idInput"
            style="@style/DiagInputText"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLength="4" />
    </LinearLayout>

    <LinearLayout style="@style/DiagRequestInputRow" >

        <Button
            android:id="@+id/modeQuestionButton"
            style="@style/QuestionButton" />

        <TextView
            android:id="@+id/modeLabel"
            style="@style/DiagInputLabel"
            android:labelFor="@+id/modeInput"
            android:text="@string/mode_label" />

        <EditText
            android:id="@+id/modeInput"
            style="@style/DiagInputText"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLength="2" />

        <Button
            android:id="@+id/pidQuestionButton"
            style="@style/QuestionButton" />

        <TextView
            android:id="@+id/pidLabel"
            style="@style/DiagInputLabel"
            android:labelFor="@+id/pidInput"
            android:text="@string/pid_label" />

        <EditText
            android:id="@+id/pidInput"
            style="@style/DiagInputText"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLength="4" />
    </LinearLayout>

    <LinearLayout style="@style/DiagRequestInputRow" >

        <Button
            android:id="@+id/payloadQuestionButton"
            style="@style/QuestionButton" />

        <TextView
            android:id="@+id/payloadLabel"
            style="@style/DiagInputLabel"
            android:labelFor="@+id/payloadInput"
            android:text="@string/payload_label" />

        <EditText
            android:id="@+id/payloadInput"
            style="@style/DiagInputText"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLength="14" />

        <Button
            android:id="@+id/nameQuestionButton"
            style="@style/QuestionButton" />

        <TextView
            android:id="@+id/nameLabel"
            style="@style/DiagInputLabel"
            android:labelFor="@+id/nameInput"
            android:text="@string/name_label" />

        <EditText
            android:id="@+id/nameInput"
            style="@style/DiagInputText"
            android:inputType="text" />
    </LinearLayout>

</LinearLayout>