<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/diagnostic"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/black"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout     
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="fill_horizontal" >
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/black"
            android:orientation="horizontal">
            
	       <Button
	             android:id="@+id/frequencyQuestionButton"
	             style="@style/QuestionButton" />    
	       <TextView
	            android:id="@+id/frequencyLabel"
	            style="@style/BaseDiagInputLabel"
	            android:layout_width="100dp"
	            android:text="@string/frequency_label"
	            android:labelFor="@+id/frequencyInput" />
	       <EditText
	            android:id="@+id/frequencyInput"
	            style="@style/BaseDiagInputText"
	            android:layout_width="100dp"
	            android:inputType="number"/>
	    
	   </LinearLayout>
	   
        <View 
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/lightBlue">
        </View>
        
	   <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:gravity="right">

	       <Button 
                android:id="@+id/clearButton"
                android:background="@drawable/clear_button_selector"
                android:layout_margin="5dp"
                android:state_pressed="false"
                android:layout_width="40dp"
                android:layout_height="40dp" >
	       </Button>
	       
	       <!-- Horizontal space filler -->
	       <View 
	           android:layout_width="0dp"
	           android:layout_height="0dp"
	           android:layout_weight="1" >
	       </View>
	       
	       <Button 
                android:id="@+id/favoritesButton"
                android:background="@drawable/favorites_button_selector"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:state_pressed="false"
                android:text="@string/favorites_button_label"
                android:layout_width="wrap_content"
                android:layout_height="40dp" >
           </Button>
	       
	       <!-- Horizontal space filler -->
           <View 
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" >
           </View>
	       
	       <Button 
               style="@style/SettingsButton"
               android:id="@+id/settingsButton" >
           </Button>
       </LinearLayout>
	           
    </LinearLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightBlue">
    </View>
        
	<include layout="@layout/diagrequestinput" 
	    android:id="@+id/inputTable"/>
		
	<LinearLayout style="@style/DiagRequestInputRow" >
		
		<Button style = "@style/RequestButton"
		    android:id="@+id/sendRequestButton"
		    android:text="@string/request_button_label" />
		
    </LinearLayout>
    
    <ListView 
	    android:id="@+id/responseOutputScroll"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	
	</ListView>
	
</LinearLayout>
